<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".information">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/nombre_s"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/primer_apellido"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/segundo_apellido"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/dia_de_nacimiento"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/mes_de_nacimiento"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/anio"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/estado"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/genero"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="77dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="154dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="231dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="308dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="385dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="462dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="539dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="616dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="211dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ape_unoTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ape_dosTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/dia_nTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/mes_nTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
        android:id="@+id/year_nTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:id="@+id/estadoTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <TextView
        android:id="@+id/generoTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/curp_g"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/regresar"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/regresar"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="278dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="59dp" />

    <Button
        android:id="@+id/new_curp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/nueva_curp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>